# LearnOpenGL

./: CMakeLists.txt
src/: CMakeLists.txt
src/gl/: GLFunc.cpp  GLFunc.h
src/main/: MainWindow.cpp  MainWindow.h  main.cpp
src/widgets/: QtOpenGLWidget.cpp  QtOpenGLWidget.h
